; ModuleID = '/home/carl/AnghaBench/libevent/extr_bufferevent_openssl.c_set_wbor.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_bufferevent_openssl.c_set_wbor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent_openssl = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bufferevent_openssl*)* @set_wbor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_wbor(%struct.bufferevent_openssl* %0) #0 {
  %2 = alloca %struct.bufferevent_openssl*, align 8
  store %struct.bufferevent_openssl* %0, %struct.bufferevent_openssl** %2, align 8
  %3 = load %struct.bufferevent_openssl*, %struct.bufferevent_openssl** %2, align 8
  %4 = getelementptr inbounds %struct.bufferevent_openssl, %struct.bufferevent_openssl* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load %struct.bufferevent_openssl*, %struct.bufferevent_openssl** %2, align 8
  %9 = call i32 @stop_writing(%struct.bufferevent_openssl* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load %struct.bufferevent_openssl*, %struct.bufferevent_openssl** %2, align 8
  %12 = getelementptr inbounds %struct.bufferevent_openssl, %struct.bufferevent_openssl* %11, i32 0, i32 0
  store i32 1, i32* %12, align 4
  %13 = load %struct.bufferevent_openssl*, %struct.bufferevent_openssl** %2, align 8
  %14 = call i32 @start_reading(%struct.bufferevent_openssl* %13)
  ret i32 %14
}

declare dso_local i32 @stop_writing(%struct.bufferevent_openssl*) #1

declare dso_local i32 @start_reading(%struct.bufferevent_openssl*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
